--- a/_config.yml
+++ b/_config.yml
@@ -122,6 +122,10 @@ author:
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       url: "https://www.instagram.com/dohyeon428/"
+    - label: "YouTube"
+      icon: "fab fa-fw fa-youtube"
+      url: "https://youtube.com/@DohyeonChoi?si=oPppFf7JEufqpxVO"
+
 
 # Site Footer
 footer:
