--- a/_config.yml
+++ b/_config.yml
@@ -287,4 +287,5 @@ defaults:
       toc_label: 목차
       toc_icon: "fas fa-tired"
       author_profile: false
+      use_math: true
 date_format: "%Y-%m-%d"
