--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ url                      : "https://brightluminate.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : ""
+logo                     : "/assets/images/BrightLuminate1.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
@@ -105,7 +105,7 @@ analytics:
 # Site Author
 author:
   name: "최도현"
-  avatar: "assets/images/IMG_3498.JPG"
+  avatar: "brightluminate.github.io/assets/images/KakaoTalk_Photo_2024-06-06-20-50-03 001 복사본.jpeg" 
   bio: "저는 새로운 도전을 좋아하고 끊임없이 변화하는 기술 세계에서 배우고 성장하기 위해 항상 노력하고 있습니다.또한 열린 소통과 협업을 중요하게 생각합니다."
   location: "South Korea"
   email: 
