--- a/_config.yml
+++ b/_config.yml
@@ -105,7 +105,7 @@ analytics:
 # Site Author
 author:
   name: "최도현"
-  avatar: "assets/images/dohyeon.jpeg" 
+  avatar: "assets/images/dog.jpeg" 
   bio: "저는 새로운 도전을 좋아하고 끊임없이 변화하는 기술 세계에서 배우고 성장하기 위해 항상 노력하고 있습니다.또한 열린 소통과 협업을 중요하게 생각합니다."
   location: "South Korea"
   email: 
